2001-08-23  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (check_last_white): new inlined helper function
	(check_prev_white): ditto
	(is_convert_nbsp_needed): updated, check for
	&nbsp;...&nbsp;<space>
	(write_prev_white_space):  new inlined helper function
	(write_last_white_space): ditto
	(convert_nbsp): updated, convert to &nbsp;...&nbsp;<space>
	(merge_word_width): commented out unused condition

2001-08-22  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cursor.c (html_engine_setup_blinking_cursor):
	start with shown cursor
	(html_engine_setup_blinking_cursor): call blink_timeout_cb
	directly 1st time
	(html_engine_draw_cursor_in_area): draw object cursors only when 

	* htmlengine-edit-clueflowstyle.c (get_props_and_set): when we are
	changing from !item at indent level 0, set insentation to 1 and
	likewise for item --> !item && indentation == 1

	* htmlclueflow.c (html_clueflow_set_style): don't change
	indentation here

2001-08-22  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (check_point): fix some stupidness of mine.

	* htmlclueflow.c (check_point): make sure that head and tail are
	not NULL before we dereference them.  Fixes ximian #5434.

2001-08-21  Larry Ewing  <lewing@ximian.com>

	* htmlclueflow.c (write_pre_tags): add some parens.

	* gtkhtml.c (gtk_html_set_paragraph_alignment): emit alignment
	changed signals for we we change the alignment.

2001-08-21  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (write_pre_tags): check for curr_tag != NULL as
	pointed out by danw

2001-08-20  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (html_clueflow_set_style): fix condition to avoid
	wrong indentation for H1

2001-08-17  Radek Doulik  <rodo@ximian.com>

	* keybindingsrc.{ms,emacs,xeamcs}: changed C-TAB rather to pure
	indent-more and S-C-TAB to indent-less

	* gtkhtml.c (insert_tab_or_indent_more_or_next_cell): new helper
	function for new GTK_HTML_COMMAND_INDENT_INC_OR_NEXT_CELL command
